very very partial fix to bill page width on mobile

--- a/public/static/public/styles/components/_meters.scss
+++ b/public/static/public/styles/components/_meters.scss
@@ -1,5 +1,11 @@
 // Meters
 
+.meter-container {
+    @include breakpoint(medium) {
+        display: flex;
+    }
+}
+
 .meter {
     margin-left: 0;
     margin-top: 2rem;
